update windows platform test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,21 +6,27 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+## Setting directories path
+set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
+set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
+
 # === Setting Project Information
 ## Project Name
 project(MyTool)
 
 if (WIN32)
     set(MYTOOL_LIB MyTool.lib)
+
 elseif (ANDROID)
-    #echo Android
+    include_directories(
+        ${INCLUDE_DIR}/android
+    )
+
+    set(MYTOOL_LIB -lMyTool)
+
 elseif (IOS)
     #echo IOS
 endif()
-
-## Setting directories path
-set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
-set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 
 ## Include directories (.h)
 include_directories(
@@ -32,10 +38,11 @@ link_directories(
     ${CMAKE_BINARY_DIR}/lib
 )
 
-## Add source to lib
-add_library(MyTool SHARED ${SOURCE_DIR}/MyTool.cpp ${SOURCE_DIR}/math/MyMath.cpp)
+set(MYTOOL_SOURCES ${SOURCE_DIR}/MyTool.cpp ${SOURCE_DIR}/math/MyMath.cpp)
 
-if (WIN32)
-    ## Add "Test" project
-    add_subdirectory(Test)
+if (ANDROID)
+    set(MYTOOL_SOURCES ${MYTOOL_SOURCES} ${SOURCE_DIR}/android/MyToolJNI.cpp)
 endif()
+
+## Add source to lib
+add_library(MyTool SHARED ${MYTOOL_SOURCES})
